@@ -1,3 +1,12 @@
+2000-06-08  Chema Celorio  <chema@celorio.com>
+
+	* search.c (gedit_search_replace_all_execute): fix an ugly
+	crash.
+
+2000-06-06  Roberto Majadas  <phoenix@nova.es>
+ 
+ 	* file.c (gedit_file_stdin): fix the pipe constant problem  
+
 2000-06-06  Chema Celorio  <chema@celorio.com>
 
 	* search.h: add last_text_searched to the structure and start_pos parameter
